--- a/aboutUs.html
+++ b/aboutUs.html
@@ -43,10 +43,9 @@
 
         <h2>Key Features</h2>
         <ul>
-            <li><strong>List Management:</strong> Easily add or remove food items, note their storage locations, set expiration dates, and receive timely notifications.</li>
+            <li><strong>List Management:</strong> Easily add or remove food items, note their storage locations, and set expiration dates.</li>
             <li><strong>Categorization:</strong> Access your food items quickly by organizing them into categories such as grains, fruits, meats, and sweets.</li>
             <li><strong>Search Functionality:</strong> Instantly find any food item in your inventory.</li>
-            <li><strong>Notifications:</strong> Get notified when your food items are nearing their expiration dates, helping you use them before they go to waste.</li>
         </ul>
 
         <p>Join us at FoodTrack and take the initial step towards more effective and sustainable food management!</p> 
