--- a/helpSupport.html
+++ b/helpSupport.html
@@ -43,7 +43,7 @@
         <h2>Send a message to this email:</h2>
         <div class="contact-container">
             <div><p>FoodTrack@gmail.com</p></div>
-            <img src="icons/copy-black.png" alt="email" onclick="location.href='mailto:FoodTrack@gmail.com?subject=Help%20and%20Support'">
+            <img src="icons/email-black.png" alt="email" onclick="location.href='mailto:FoodTrack@gmail.com?subject=Help%20and%20Support'">
         </div>
         
     </div>
